--- a/app/src/app/projects/pages/projects-page/projects-page.component.scss
+++ b/app/src/app/projects/pages/projects-page/projects-page.component.scss
@@ -1,6 +1,7 @@
 .container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   height: 100%;
   width: 100%;
 
@@ -13,13 +14,10 @@
 }
 
 .scan-button {
-  width: calc(100vw - 95px);
   align-self: center;
-  margin: 8px 0;
-}
-
-.project-content {
-  margin-top: 16px;
+  margin-bottom: 8px;
+  margin-top: 8px;
+  width: 100px;
 }
 
 ion-slides {
